k8s/base/expense-doc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-doc-api
  labels:
    app: expense-doc
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: expense-doc
    component: api
